--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Hello, world!</h1>
 
-    <p id="p1"></p>
-    <p id="p2"></p>
-    <p id="p3"></p>
+    <label id="myLabel">Enter your name</label><br>
+    <input type="text" id="myText"></input><br>
+    <button type="submit" id="myButton">Submit</button>
 
 </body>
 
